--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
- — “8.9.4”
+ — "8.9.4"
 branches:
  only:
  — master
 before_script:
- — npm install -g ionic cordova
+ — npm install -g ionic@latest cordova
 script:
  — ionic cordova build browser — prod
 deploy:
