Editing travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_script:
   - npm install -g ionic cordova
 
 script:
+  - ionic cordova platform rm browser --save
+  - ionic cordova platform add browser@latest --save
   - ionic cordova build browser --prod
 
 deploy:
