--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
 before_script:
 - npm install -g ionic cordova
 script:
+- npm install express --save
 - npm run build
 deploy:
   provider: heroku
