--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "@ionic/app-scripts": "3.2.1",
+    "typescript": "~2.6.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
