Added new script for building

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
 - npm install -g ionic cordova
 - npm install express --save
 script:
-- npm run build
+- ionic build browser --prod
 deploy:
  - provider: heroku
    app: myweather-tony
