--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "@ionic-native/geolocation": "^4.18.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
+    "@ionic/app-scripts": "3.2.1",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
+    "body-parser": "^1.18.3",
     "cordova-plugin-geolocation": "4.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "morgan": "^1.9.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "@ionic/app-scripts": "3.2.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.6.2",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
